# fast-api-example

./: .dockerignore  Dockerfile  Makefile  README.md  alembic.ini  dev.db  docker-compose.prod.yml  docker-compose.yml  env.docker  env.prod  pyproject.toml
app/: database.py  main.py  schema.py  settings.py
data/: dev.db
docs/: docker-deploy.md
migrations/: env.py
migrations/versions/: cf0bc5511550_init_db.py
